--- a/server/Dockerfile.dev
+++ b/server/Dockerfile.dev
@@ -1,12 +1,12 @@
 FROM node:14-slim
 
 EXPOSE 8080
+
 WORKDIR /usr/src/app
 
-COPY package.json ./
-COPY ./yarn.lock ./
+COPY package.json yarn.lock ./
 
-RUN yarn install
+# RUN yarn install
 
 COPY . .
 
