--- a/client/Dockerfile.dev
+++ b/client/Dockerfile.dev
@@ -1,15 +1,14 @@
 FROM node:14-slim
 
+EXPOSE 3000
+
 WORKDIR /usr/src/app
 
-# COPY package*.json yarn.lock ./
-COPY package.json ./
-COPY ./yarn.lock ./
+COPY package.json yarn.lock ./
 
 RUN yarn install
 
 COPY . .
 
-EXPOSE 3000
 
 CMD ["yarn","start"]
