--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,9 @@ version: '2.4'
 
 services:
   server:
-    build: ./server
+    build:
+      context: ./server
+      dockerfile: Dockerfile.dev
     restart: unless-stopped
     ports:
       - "8080:8080"
@@ -12,15 +14,21 @@ services:
     env_file: ./server/.env
     environment:
       - NODE_ENV=development
+    volumes:
+      - ./server:/usr/src/app
 
   client:
-    build: ./client
+    build:
+      context: ./client
+      dockerfile: Dockerfile.dev
     restart: unless-stopped
     depends_on:
       - server
     ports:
       - "3000:3000"
     stdin_open: true
+    volumes:
+      - ./client:/usr/src/app
 
   mongo:
     image: mongo
