--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,13 @@
 FROM node:14-slim
 
-EXPOSE 3000
+EXPOSE 8080
 
 WORKDIR /usr/src/app
 
 COPY package.json yarn.lock ./
 
+RUN yarn install
+
 COPY . .
 
-
-CMD ["yarn","start"]
+CMD ["yarn", "dev"]
